height on mobile fixes

--- a/public/responsive.css
+++ b/public/responsive.css
@@ -71,15 +71,16 @@
 
 @media only screen and (max-width: 391px) {
     .one-page {
-        max-height: 340vh;
+        max-height: 400vh;
     }
 
+
     #home h1 {
-        font-size: 60px;
+        font-size: 50px;
     }
 
     #home h2 {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
     }
     .about-line,
     .work-line,
